# Scraping

./: .env.example  .gitignore  MAIN_BACKEND_INTEGRATION.md  README.md  alembic.ini  alter_script.py  api_report.md  check_images.py  inspect_raw.py  modal_app.py  pyproject.toml  recover_apify.py  requirements.txt  seed_groups.py  test_embed.py  test_image_download.py  test_models.py  test_models_all.py  test_pipeline.py  test_redispatch.py  test_scrape.py  test_scrape_with_images.py
app/: __init__.py
app/api/: dependencies.py  main.py  schemas.py
app/api/routes/: groups.py  health.py  matches.py  posts.py  scrape.py
app/core/: config.py  exceptions.py  logging.py
app/db/: base.py  session.py
app/db/models/: __init__.py  group.py  job.py  match.py  post.py
app/matching/: engine.py
app/processing/: analyzer.py  batch.py  pipeline.py  signatures.py
app/scraper/: apify_client.py  base.py  dedup.py  dispatcher.py  dotnet_client.py  dotnet_metadata_client.py
migrations/: env.py
migrations/versions/: 20260411_0016_57f2fb98f457_initial_schema.py  20260504_0344_2579bf2b70ce_simplify.py  20260510_0144_0201ff98d6b8_add_sent_to_dotnet_to_processed_posts.py
scripts/: seed_demo_data.py
